--- a/blog-frontend/src/components/auth.scss
+++ b/blog-frontend/src/components/auth.scss
@@ -44,6 +44,14 @@
             color: #828282;
         }
     }
+
+    .alert_text{
+        font-size: 16px;
+        font-weight: 500;
+        color: #c92914;
+        text-align: center;
+        padding-bottom: 20px;
+    }
     
     .auth_btn{
         display: block;
