--- a/blog-frontend/src/index.css
+++ b/blog-frontend/src/index.css
@@ -1,21 +1,32 @@
-@charset "utf-8";
-/* 폰트설정(구글폰트 가져오기, 자체 fonts라는 폴더로부터 연동) */
-
-*{-webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box;
-/* 주요폰트 설정 */}
-
-html, body {
-  margin: 0; padding: 0;
-  font-family: 'Segoe UI', 'Roboto', 'Oxygen',
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: #f7f7f7;
+  box-sizing: border-box; /* 엘리먼트의 box-sizing 값을 border-box로 설정 */
+  min-height: 100%;
 }
 
-header, section, article, aside, main, nav, footer{display: block;}
-h1, h2, h3, h4, h5, h6, p{margin: 0;}
-ul, ol{margin: 0; padding: 0; list-style: none;}
-a{text-decoration: none;}
-.clear{clear: both;}
+#root{
+  min-height: 100%;
+}
+
+/* 추후 회원 인증 페이지에서 배경 화면을 페이지의 전체 영역에 채우기 위한 용도 */
+html{
+  height: 100%;
+}
+
+/* 링크의 색상 및 밑줄 없애기 */
+a{
+  color: inherit;
+  text-decoration: none;
+}
+
+*{box-sizing: inherit;}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
+}
